Renamed files, broke all tests =)

--- a/tests/objectjs-test-all.conf
+++ b/tests/objectjs-test-all.conf
@@ -1,8 +1,8 @@
 server: http://localhost:6789
 
 load:
-#  - lib/fractal.min.js
-  - ../src/fractal.js
+#  - lib/ObjectJS.min.js
+  - ../src/ObjectJS.js
   - ../src/core/utils/Core.js
   - ../src/core/utils/ArrayUtils.js
   - ../src/core/controllers/BaseController.js
@@ -16,7 +16,7 @@ load:
   - ../src/extras.js
   - ../src/config.js   
 test:
-  - fractal-test.js
+  - objectjs-test.js
   - core/controllers/*.js
   - core/mixins/*.js
   - core/uis/*.js
