--- a/tests/objectjs-test-min-all.conf
+++ b/tests/objectjs-test-min-all.conf
@@ -1,10 +1,10 @@
 server: http://localhost:6789
 
 load:
-  - lib/fractal.all.min.js
+  - lib/ObjectJS.all.min.js
 
 test:
-  - fractal-test.js
+  - objectjs-test.js
   - core/controllers/*.js
   - core/mixins/*.js
   - core/uis/*.js
