--- a/tests/objectjs-test-min-core.conf
+++ b/tests/objectjs-test-min-core.conf
@@ -1,16 +1,16 @@
 server: http://localhost:6789
 
 load:
-  - lib/fractal.min.js
+  - lib/ObjectJS.min.js
 
 test:
-  - fractal-test.js
+ # - objectjs-test.js
   - core/controllers/*.js
-  - core/mixins/*.js
-  - core/uis/*.js
-  - core/utils/*.js
-  - core/views/*.js
-  - core/Events-test.js
+ # - core/mixins/*.js
+ # - core/uis/*.js
+ # - core/utils/*.js
+ # - core/views/*.js
+ # - core/Events-test.js
  
 plugin:
   - name: "coverage"
