More unit tests

--- a/tests/conf/objectjs-test-min-all.conf
+++ b/tests/conf/objectjs-test-min-all.conf
@@ -10,9 +10,8 @@ test:
   - ../src/core/uis/*.js
   - ../src/core/utils/*.js
   - ../src/core/views/*.js
+  - ../src/core/templates/*.js
   - ../src/core/Events-test.js
-  
-  - ../src/extras/mixins/*.js
   - ../src/extras/utils/*.js
 
 plugin:
