--- a/tests/conf/objectjs-test-all.conf
+++ b/tests/conf/objectjs-test-all.conf
@@ -8,9 +8,9 @@ load:
   - ../../src/core/controllers/BaseController.js
   - ../../src/core/views/BaseView.js
   - ../../src/core/uis/BaseUI.js
+  - ../../src/core/templates/Templates.js
   - ../../src/core/mixins/Native.js
   - ../../src/core/Events.js
-  - ../../src/extras/mixins/jQuery.js
   - ../../src/extras/utils/HashMap.js
   - ../../src/extras/utils/Console.js
   - ../../src/extras.js
@@ -22,9 +22,9 @@ test:
   - ../src/core/uis/*.js
   - ../src/core/utils/*.js
   - ../src/core/views/*.js
+  - ../src/core/templates/*.js
   - ../src/core/Events-test.js
   
-  - ../src/extras/mixins/*.js
   - ../src/extras/utils/*.js
 
 plugin:
