--- a/tests/conf/objectjs-test-all.conf
+++ b/tests/conf/objectjs-test-all.conf
@@ -9,8 +9,8 @@ load:
   - ../../src/core/views/BaseView.js
   - ../../src/core/uis/BaseUI.js
   - ../../src/core/templates/Templates.js
-  - ../../src/core/mixins/Native.js
   - ../../src/core/Events.js
+  - ../../src/mixins/Native.js
   - ../../src/extras/utils/HashMap.js
   - ../../src/extras/utils/Console.js
   - ../../src/extras.js
@@ -18,13 +18,12 @@ load:
 test:
   - ../src/objectjs-test.js
   - ../src/core/controllers/*.js
-  - ../src/core/mixins/*.js
   - ../src/core/uis/*.js
   - ../src/core/utils/*.js
   - ../src/core/views/*.js
   - ../src/core/templates/*.js
   - ../src/core/Events-test.js
-  
+  - ../src/mixins/*.js  
   - ../src/extras/utils/*.js
 
 plugin:
