--- a/tests/conf/objectjs-test-min-all.conf
+++ b/tests/conf/objectjs-test-min-all.conf
@@ -6,12 +6,12 @@ load:
 test:
   - ../src/objectjs-test.js
   - ../src/core/controllers/*.js
-  - ../src/core/mixins/*.js
   - ../src/core/uis/*.js
   - ../src/core/utils/*.js
   - ../src/core/views/*.js
   - ../src/core/templates/*.js
   - ../src/core/Events-test.js
+  - ../src/mixins/*.js
   - ../src/extras/utils/*.js
 
 plugin:
