--- a/tests/conf/objectjs-test-min-core.conf
+++ b/tests/conf/objectjs-test-min-core.conf
@@ -6,11 +6,11 @@ load:
 test:
   - ../src/objectjs-test.js
   - ../src/core/controllers/*.js
-  - ../src/core/mixins/*.js
   - ../src/core/uis/*.js
   - ../src/core/utils/*.js
   - ../src/core/views/*.js
   - ../src/core/Events-test.js
+  - ../src/mixins/*.js
 
 plugin:
   - name: "coverage"
