--- a/tests/conf/objectjs-test-jquery-all.conf
+++ b/tests/conf/objectjs-test-jquery-all.conf
@@ -8,8 +8,8 @@ load:
   - ../../src/core/views/BaseView.js
   - ../../src/core/uis/BaseUI.js
   - ../../src/core/templates/Templates.js
-  - ../../src/core/mixins/Native.js
   - ../../src/core/Events.js
+  - ../../src/mixins/jQuery.js
   - ../../src/extras/utils/HashMap.js
   - ../../src/extras/utils/Console.js
   - ../../src/extras.js
