--- a/tests/conf/objectjs-test-jquery-all.conf
+++ b/tests/conf/objectjs-test-jquery-all.conf
@@ -1,6 +1,7 @@
 server: http://localhost:6789
 
 load:
+  - http://code.jquery.com/jquery-latest.min.js
   - ../../src/ObjectJS.js
   - ../../src/core/utils/Core.js
   - ../../src/core/utils/ArrayUtils.js
@@ -17,13 +18,12 @@ load:
 test:
   - ../src/objectjs-test.js
   - ../src/core/controllers/*.js
-  - ../src/core/mixins/*.js
   - ../src/core/uis/*.js
   - ../src/core/utils/*.js
   - ../src/core/views/*.js
   - ../src/core/templates/*.js
   - ../src/core/Events-test.js
-  
+  - ../src/mixins/*.js
   - ../src/extras/utils/*.js
 
 plugin:
