--- a/tests/conf/objectjs-test-min-jquery-all.conf
+++ b/tests/conf/objectjs-test-min-jquery-all.conf
@@ -1,15 +1,17 @@
 server: http://localhost:6789
 
 load:
-  - ../../objectjs.min.js
-
+  - http://code.jquery.com/jquery-latest.min.js
+  - ../../objectjs-jquery-all.min.js
 test:
   - ../src/objectjs-test.js
   - ../src/core/controllers/*.js
   - ../src/core/uis/*.js
   - ../src/core/utils/*.js
   - ../src/core/views/*.js
+  - ../src/core/templates/*.js
   - ../src/core/Events-test.js
+  - ../src/extras/utils/*.js
 
 plugin:
   - name: "coverage"
