--- a/tests/conf/objectjs-test-min-zepto-core.conf
+++ b/tests/conf/objectjs-test-min-zepto-core.conf
@@ -1,8 +1,8 @@
 server: http://localhost:6789
 
 load:
-  - ../../objectjs.min.js
-
+  - http://zeptojs.com/zepto.min.js
+  - ../../objectjs-jquery.min.js
 test:
   - ../src/objectjs-test.js
   - ../src/core/controllers/*.js
